# river

./: CMakeLists.txt  README.md  Test.tscn  project.godot  river-project.code-workspace
framework/: CMakeLists.txt
framework/include/river/: river.h
framework/include/river/app/: application.h  asset_manager.h
framework/include/river/core/: container.h  rmath.h
framework/include/river/render/: shader.h
framework/src/: river.cpp
framework/src/app/: application.cpp  asset_manager.cpp
framework/src/core/: rmath.cpp
framework/src/render/: shader.cpp
resources/fonts/: Font.tres
resources/spriteframes/: entity.tres  lerow.tres  sticky_green_1.tres  sticky_red_1.tres
resources/tilesets/: tileset_collision.tres  tileset_forest01.tres
river-framework/: CMakeLists.txt
river-framework/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
river-framework/src/: river.cpp  river.h
river-sandbox/: CMakeLists.txt
river-sandbox/build-linux/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  sandbox
river-sandbox/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
scenes/: Stage.gd  Stage.tscn
scenes/entities/: Entity.gd  Entity.tscn  EntityAI.tscn  Idle.gd  Jump.gd  Lerow.gd  Lerow.tscn  LerowStateMachine.gd  Move.gd  Pig.tscn  StickyGreen.gd  StickyGreen.tscn  StickyRed.tscn
scenes/environment/: Box.gd  Box.tscn  Bridge.tscn  Item.gd  Item.tscn  Lava.gd  Lava.tscn  Pressure.gd  Pressure.tscn
scenes/levels/: Forest01.gd  Forest01.tscn  Forest_Village.tscn
scenes/shader/: shader_wind.tres
scenes/singletons/: ItemData.gd
scenes/system/: BasicEntityStateMachine.gd  EntityState.gd  EntityStateMachine.gd  EntityStateMachineAir.gd  EntityStateMachineLadder.gd  InputHandler.gd  InputHandlerAI.gd  InputHandlerPlayer.gd  Inventory.gd  LerowEntityStateMachine.gd  PlayerController.gd  PlayerController.tscn  PlayerInputHandler.gd  State.gd  StateMachine.gd
scenes/system/scriptable_objects/: ItemType.gd
scenes/ui/: HeartContainer.tscn  InventoryUI.gd  InventoryUI.tscn  ItemUI.gd  ItemUI.tscn
sounds/fx/: click01.wav.import  click02.wav.import
src/: core.h  glad.c  main.cpp
src/app/: application.cpp  application.h  asset_manager.cpp  asset_manager.h
src/render/: interface_drawable.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture2d.cpp  texture2d.h  tile_map_renderer.cpp  tile_map_renderer.h  vertex_array.cpp  vertex_array.h
textures/: Pressure.tscn
textures/backgrounds/: forest_cloud01.png.import  forest_cloud02.png.import  forest_cloud03.png.import  forest_cloud04.png.import  forest_cloud05.png.import  forest_nature01.png.import  forest_nature02.png.import  forest_nature03.png.import  tmp_background_clouds.aseprite
textures/sprites/entities/lerow/: lerow.png.import  lerow_fall.png.import  lerow_idle-Sheet.png.import  lerow_jump.png.import  lerow_move-Sheet.png.import
textures/sprites/entities/sticky/: sticky_green01.png.import  sticky_red01.png.import
textures/sprites/enviroment/: forest_bridge01.png.import  forest_dirt_platform.png.import  forest_pressure_green_activated.png.import  forest_pressure_green_deactivated.png.import  moving_chest.png.import
textures/sprites/items/: item_herbs_prepared.png.import  item_template.png.import
textures/tilesets/: palette.aseprite  tileset_collision.png.import  tileset_forest01.png.import
textures/ui/: heart_empty.png.import  heart_full.png.import  lava.shader
